configured title, subtitle and author

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://rchavarria.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: R. Chavarria's Blog
+subtitle: Blogging like a hacker about Software Development
+author: Ruben Chavarria
 simple_search: http://google.com/search
 description:
 
