--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://rchavarria.github.com
+url: http://rchavarria.github.io
 title: R. Chavarria's Blog
 subtitle: Blogging like a hacker about Software Development
 author: Rub&eacute;n Chavarr&iacute;a
