Change blog header

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://rchavarria.github.io
 title: R. Chavarria's Blog
-subtitle: Blogging like a hacker about Software Development
+subtitle: Proud of developing software, proud of being an Engineer
 author: Rub&eacute;n Chavarr&iacute;a
 simple_search: http://google.com/search
 description:
