--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,4 +11,4 @@ services:
       - ..:/srv/jekyll      # share local source files with the container
       - ../vendor/bundle:/usr/local/bundle     # cache ruby gems
 
-    entrypoint: jekyll serve --watch --incremental --force_polling
+    entrypoint: jekyll serve --watch --incremental --force_polling --verbose
