--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-primer
 
 url: http://rchavarria.github.io
 name: Rubén Chavarría
-title: Migración del blog (R. Chavarria's blog)
+title: R. Chavarria's blog
 description: Proud of developing software, proud of being an Engineer
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
